<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_msg">Поделиться приложением</string>
    <string name="support_msg">Написать в поддержку</string>
    <string name="legal">Пользовательское соглашение</string>
</resources>